# smart-zip

./: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf  ver8.code-workspace
src/: bm_lite.c  bm_lite.h  main.c
src/BMLite_sdk/: bmlite_hal.h  bmlite_if.c  hal_board.c  hal_spi.c  hal_spi.h  hal_timebase.c  hcp_tiny.c  platform.c  platform.h
